classDiagram

class LivingBeing
class Animal
class Plant

class Vertebrate
class Invertebrate

class Mammal
class Bird
class Fish

class Dog
class Parrot
class Trout

LivingBeing <|-- Animal
LivingBeing <|-- Plant

Animal <|-- Vertebrate
Animal <|-- Invertebrate

Vertebrate <|-- Mammal
Vertebrate <|-- Bird
Vertebrate <|-- Fish

Mammal <|-- Dog
Bird <|-- Parrot
Fish <|-- Trout